<resources>
    <string name="app_name">Minhas Listas</string>

    <!-- Hints -->
    <string name="hint_cpf">CPF</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_dataNascimentoCadastro">Data de Nascimento</string>
    <string name="hint_celularCadastro">Celular</string>
    <string name="hint_emailLogin">Email</string>
    <string name="hint_emailCadastro">Email</string>
    <string name="hint_comfirmEmailCadastro">Digite novamente seu email</string>
    <string name="hint_senhaCadastro">Escolha uma senha</string>
    <string name="hint_confirmSenhaCadastro">Digite novamente sua senha</string>
    <string name="hint_nomeLista">Ex: Compras do mês, Aniversário do Lucas</string>

    <!-- Erros -->
    <string name="msg_erro_nome">O campo nome é obrigatório</string>
    <string name="msg_erro_dataNascimento">O campo data é obrigatório</string>
    <string name="msg_erro_celular">O campo celular é obrigatório</string>
    <string name="msg_erro_email">Email inválido</string>
    <string name="msg_erro_email_empty">O campo email é obrigatório</string>
    <string name="msg_erro_senha">Senha inválida</string>
    <string name="msg_erro_senha_empty">O campo senha é obrigatório</string>
    <string name="msg_erro_confirmSenha">As senhas não coincidem</string>
    <string name="msg_erro_confirmSenha_empty">Por favor preencha a confirmação da sua senha</string>
    <string name="msg_erro_cadastro">Cadastro não realizado</string>

    <string name="login_button_label">Login</string>

    <!-- Sucessos -->
    <string name="msg_sucessoCadastro">Usuário cadastrado com sucesso</string>

    <!-- Activity Principal -->
    <string name="botao_entrar">Entrar</string>
    <string name="esqueci_Senha">Esqueci minha senha!</string>
    <string name="possuiCadastro">Ainda não possui cadastro?</string>
    <string name="cadastrar">Cadastre-se.</string>
    <string name="botao_Sobre">Sobre</string>
    <string name="chkbManterConectado">Manter conectado</string>

    <!-- Activity Cadastro-->
    <string name="cadastro_activity">Cadastro</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="logout">Sair</string>
    <string name="adicionar_item">Adicionar Item</string>
</resources>
